# python-template

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .ruff.toml  .secrets.baseline  Dockerfile  README.md  copier.yml  main.py  package-lock.json  package.json  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build-docker.yml  build-package.yml  build.yml  ci.yml  renovate.yml  template-sync.yml  test.yml
src/app/: main.py
src/python_template/: cli.py  core.py  main.py
tests/: test_main.py
tests/python_template/: test_cli.py  test_core.py  test_main.py
