[project]
name = "python-template"
version = "0.1.0"
description = "Python Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.2",
]


[tool.ruff]
target-version = "py313"
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN"]

[tool.ruff.lint.pycodestyle]
max-line-length = 160

[tool.ruff.lint.per-file-ignores]
".github/*" = ["ALL"]
"tests/*" = ["S101"]


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.pyright]
typeCheckingMode = "standard"


[tool.mypy]
check_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
local_partial_types = true
implicit_reexport = false
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "ignore-without-code",
]
